[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet to issuing Ethereum assets"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-ethereum-issuing"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec          = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
ethereum-types = { default-features = false, version = "0.11.0" }
log            = { version = "0.4.14" }
serde          = { version = "1.0.125", optional = true }
serde_json     = { version = "1.0.64", optional = true }
# oracol
oracol-ethereum-issuing-contract = { default-features = false, path = "contract" }
oracol-evm                       = { default-features = false, path = "../../../evm" }
oracol-evm-precompile            = { default-features = false, path = "../../../evm/precompile" }
oracol-relay-primitives          = { default-features = false, path = "../../../../primitives/relay" }
oracol-support                   = { default-features = false, path = "../../../support" }
dp-evm                             = { default-features = false, path = "../../../../primitives/evm" }
dvm-ethereum                       = { default-features = false, path = "../../../dvm" }
ethereum-primitives                = { default-features = false, path = "../../../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"substrate-std",
	"crates-std",
	"oracol-std",
]

crates-std = [
	"codec/std",
	"ethereum-types/std",
	"serde",
	"serde_json",
]

oracol-std = [
	"oracol-evm/std",
	"oracol-evm-precompile/std",
	"oracol-ethereum-issuing-contract/std",
	"ethereum-primitives/std",
	"oracol-relay-primitives/std",
	"oracol-support/std",
	"dp-evm/std",
	"dvm-ethereum/std",
]

substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
