[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
build       = "build.rs"
description = "FRAME pallet to linear relay Ethereum headers"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-ethereum-linear-relay"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec          = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.11.0", default-features = false }
log            = { version = "0.4.14" }
rlp            = { version = "0.5.0", default-features = false }
serde          = { version = "1.0.125", optional = true }
serde_json     = { version = "1.0.64", optional = true }
# oracol
oracol-support    = { default-features = false, path = "../../../support" }
ethereum-primitives = { default-features = false, path = "../../../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# crates
array-bytes = { version = "1.1.0" }
# oracol
oracol-balances   = { path = "../../../../frame/balances" }
ethereum-primitives = { features = ["deserialize"], path = "../../../../primitives/ethereum-primitives" }
# substrate
sp-core = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io   = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethereum-types/std",
	"ethereum-types/serialize",
	"rlp/std",
	"serde",
	"serde_json",
]
oracol-std  = [
	"oracol-support/std",
	"ethereum-primitives/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
