[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet to back Oldoxor assets"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-oldoxor-backing"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
serde = { version = "1.0.125", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]
