[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME to issue CXOR"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-oldxor-issuing"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
log        = { version = "0.4.14", optional = true }
paste      = { version = "1.0.5", optional = true }
serde      = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
# oracol
oracol-support = { optional = true, path = "../../../support" }

[dev-dependencies]
# substrate
sp-io = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
# oracol
oracol-balances = { path = "../../../balances" }
oracol-support  = { path = "../../../support" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]

genesis-loader = [
	"serde_json",
	"oracol-support",
]

try-runtime = [
	"log",
	"paste",
	"frame-support/try-runtime",
]
