[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Oracol."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dvm-rpc-runtime-api"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec          = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
ethereum       = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11.0", default-features = false }
# oracol
oracol-evm	   	= { default-features = false, path = "../../../evm" }
oracol-support	= { default-features = false, path = "../../../support" }
dp-evm       		= { default-features = false, path = "../../../../primitives/evm" }
# substrate
sp-api     = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-core    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io      = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std     = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

oracol-std = [
	"oracol-evm/std",
	"oracol-support/std",
	"dp-evm/std",
]

crates-std = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
]

substrate-std = [
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
